<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="64sp"
                android:paddingStart="0sp"
                android:text="@string/interactive_desc" />

            <Switch
                android:id="@+id/swInteractive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/interactive_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="64sp"
                android:paddingStart="0sp"
                android:text="@string/clock_desc" />

            <Switch
                android:id="@+id/swClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/clock_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="64sp"
                android:paddingStart="0sp"
                android:text="@string/battery_desc" />

            <Switch
                android:id="@+id/swBattery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/battery_title" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/tbAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="192sp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/tbCollapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/channel_banner"
                android:layout_width="match_parent"
                android:layout_height="192sp"
                android:scaleType="fitStart"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                app:layout_collapseParallaxMultiplier="0.7"
                app:srcCompat="@drawable/ic_settings_black_48dp"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>